<resources>
    <string name="app_name">WTFridge</string>
    <string name="facebook_app_id">329505697191143</string>
    <string name="intro_text_title1">Decisions made easy</string>
    <string name="intro_text1">Don’t worry about buying and wasting your groceries. We are here to help.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="join_with_us">Join with us!</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_in">Log In</string>
    <string name="sign_up">Sign Up</string>

    <string name="verify_code_description">We need your Phone number to send you verification codes.</string>
    <string name="verify_enter_phone_hint">Enter your phone number</string>
    <string name="verify_add_phone_number">Add my Phone Number</string>
    <string name="verify_add_phone_number_title">Add Phone Number</string>
    <string name="login_title_text">Welcome back! Let’s get you settled in.</string>
    <string name="log_me_in">Log Me In</string>
    <string name="sign_up_here">Don’t have an account? Sign up for one here.</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_up_title">Hello! Here’s how you can get started</string>
    <string name="your_name">Tell us your name</string>
    <string name="privacy_policy">By signing up, you agree to the Terms of Use and Privacy Policy.</string>
    <string name="create_my_account">Create my account</string>
    <string name="login_here">Already have an account? Login here.</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="login_fb">Log in with Facebook</string>
    <string name="item_name">Item Name</string>
    <string name="expired_date">Expired Date</string>
    <string name="unit_txt">Unit for Quantity</string>
    <string name="select_a_date">Select a date</string>
    <string name="select_unit">Select a unit</string>
    <string name="quantity">Quantity</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
</resources>