<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.rubify.wtfridge.ui.main.AddNewItemFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/add_photo_1"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/add_photo_placeholder"
            android:minHeight="180dp" />

        <ImageView
            android:id="@+id/add_photo_2"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:src="@drawable/add_photo_placeholder"
            android:scaleType="fitCenter" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_name" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:hint="For example, bread or butter"/>

        <ImageView
            android:id="@+id/input_item_name_voice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|end"
            android:layout_marginBottom="2dp"
            android:padding="10dp"
            android:src="@drawable/ic_voice" />


    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expired_date" />

    <EditText
        android:id="@+id/input_expired_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_a_date"
        android:inputType="datetime" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unit_txt" />

    <EditText
        android:id="@+id/input_unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_unit" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quantity" />

    <EditText
        android:id="@+id/input_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_quantity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/save_btn"
            style="@style/saveButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />

    </LinearLayout>

</LinearLayout>
