<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:padding="16dp"
    tools:context="com.rubify.wtfridge.ui.signup.SignUpFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_small"/>

    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_title"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:gravity="center"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColorHint="@android:color/white" >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/userNameTxt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/your_name"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColorHint="@android:color/white" >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/emailTxt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_address"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColorHint="@android:color/white" >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/passwordTxt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@android:color/white" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_marginTop="16dp"
        android:id="@+id/privacy_policy_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy"
        android:textColor="@android:color/white"/>

    <Button
        android:layout_marginTop="48dp"
        android:id="@+id/sign_up_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBtnLogin"
        android:textSize="18sp"
        android:text="@string/create_my_account"
        android:textColor="@android:color/white" />



    <TextView
        android:layout_marginTop="24dp"
        android:id="@+id/login_here"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_here"
        android:textColor="@android:color/white"/>


</LinearLayout>
