<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_intro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.rubify.wtfridge.ui.start.StartActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="visible" />

    <android.support.design.widget.TabLayout
        android:id="@+id/tabLayout"
        android:layout_height="24dp"
        android:layout_width="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:tabBackground="@drawable/tab_indicator"
        app:tabGravity="center"
        app:tabIndicatorHeight="0dp"/>

    <com.facebook.login.widget.LoginButton
        xmlns:facebook="http://schemas.android.com/apk/res-auto"
        android:id="@+id/loginFbButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        facebook:com_facebook_login_text="@string/login_fb"
        android:paddingTop="8dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingBottom="8dp"
        android:background="@color/colorFbButton"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/signup_txt"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/sign_up"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/login_txt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/sign_in"/>

    </LinearLayout>

</LinearLayout>
